Bug 136337 - FILEOPEN PPTX: one of three images not shown in presentation mode (but fine in edit mode)
Summary: FILEOPEN PPTX: one of three images not shown in presentation mode (but fine i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2020-08-31 18:43 UTC by Gerald Pfeifer
Modified: 2022-03-01 20:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX), excerpted from larger techtalk_whats*arm.pptx (1010.23 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-08-31 18:43 UTC, Gerald Pfeifer
Details
Screenshot with LibreOffice 7.1 alpha in presentation mode (258.29 KB, image/png)
2020-08-31 18:46 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-08-31 18:43:43 UTC
Created attachment 164932 [details]
Sample slide (PPTX), excerpted from larger techtalk_whats*arm.pptx

The attached slide looks as expected in edit mode, alas when viewing in
presentation mode the middle of the three images is not rendered.

This is a regression in Version: 7.1.0.0.alpha0+
Build ID: cac7ad2d011eb6602b6c9702dddb76d129f093c8
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-08-27_04:59:51

LibreOffice 6.4.4.2 appears fine.
Comment 1 Gerald Pfeifer 2020-08-31 18:46:08 UTC
Created attachment 164933 [details]
Screenshot with LibreOffice 7.1 alpha in presentation mode

Presentation mode is key to see this issue.  Linux, Gnome desktop, gtk3.
Comment 2 BogdanB 2020-08-31 20:12:50 UTC
Confirm it with
Version: 7.1.0.0.alpha0+
Build ID: e2f4e65a7b8024c00b049eebf0d87637efda7f24
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ja-JP (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 BogdanB 2020-08-31 20:13:13 UTC
 3db22207d371a3fed4ab24d2b513b1d96ca6f0eb is the first bad commit
commit 3db22207d371a3fed4ab24d2b513b1d96ca6f0eb
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Aug 14 19:44:57 2020 +0200

    source 78036f74fa74ee2552e79064660634e1342692ff
    
    source 78036f74fa74ee2552e79064660634e1342692ff

 instdir/program/libcairocanvaslo.so | Bin 1016600 -> 1016680 bytes
 instdir/program/setuprc             |   2 +-
 instdir/program/versionrc           |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)
Comment 4 Aron Budea 2020-09-11 22:11:26 UTC
That is:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=78036f74fa74ee2552e79064660634e1342692ff
author		Miklos Vajna <vmiklos@collabora.com>	2020-08-14 16:15:07 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2020-08-14 18:39:39 +0200

"tdf#135094 cairo canvas: fix black slide containing a very small image"

Adding CC: to Miklos Vajna.
Comment 5 Commit Notification 2020-09-22 07:01:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/446de9cbea55af65b5f1a274f1ac4b88a6be9ae6

tdf#136337 cairo canvas: fix missing image with negative height

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2020-09-25 19:10:01 UTC
Solved.

Verified in
Version: 7.1.0.0.alpha0+
Build ID: 4a899a5f8a72ea29a6919316afe3627de9f33e95
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded